css/style.css
@media (prefers-color-scheme: dark) {
  /* TODO */
}

@keyframes fadeIn {
  0%   { opacity: 0.0;   }
  100% { opacity: 1.0; }
}

/* FONTAWESOME *********************************************************************************/

i.fa-solid, i.fa-regular {
  font-family: 'Font Awesome 5 Free';
}

/* HTML, BODY, GENERAL ************************************************************************/

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  background: #ffffff;
  background-image: url(../images/bg-pattern.png);
}

h1, h2, h3, h4 {
  font-family: "Merriweather";
  font-weight: 300;
  color: #444;
}

h1 { font-size: 3rem; }
h2 { font-size: 2.5rem; font-weight: 400;}
h3 { font-size: 1.5rem; border-bottom: 1px solid #aaa;}

li {
  list-style-type: disc;
}

.airbnb {
  font-family: "Montserrat";
  font-weight: 600;
  color: #ff385c;
}

.text-justify * {
  text-align: justify;
  text-justify: inter-character;
}

/* WRAPPER *********************************************************************************/

.container {
  max-width: 1200px;
}

#content {
  min-height: 100%;
  background: #ffffff;
  padding-left: 0;
  padding-right: 0;
}

/* This fixes the padding 0 on #content (every top-level row has a negative margin */
#content .row {
  margin-right: 0;
}

/* HEADER *********************************************************************************/

#header img.logo {
  height: 96px;
}

#header div {
  font-family: "Merriweather";
  font-weight:400;
  font-size:18px;
  letter-spacing:0.1cqw;
  color:#000000;
}

#flags img {
  height: 32px;
}

#flags-choice a {
  text-decoration: none;
}

/* CAROUSEL *********************************************************************************/

/* change transition duration to control the speed of fade effect */
.slider {
  transition: transform 2.6s ease-in-out;
}

.carousel-fade .active.carousel-item-start,
.carousel-fade .active.carousel-item-end {
  transition: opacity 0s 2.6s;
}

#mainCarousel .carousel-inner {
  animation: fadeIn 2s;
}

.carousel-item {
  background-color: black;
  position: relative;
  height: 100%;
  container-type: inline-size;
}

.slider img {
  background-position: center;
  background-size: cover;
  opacity: 0.75;
}

.slider .text {
  position: absolute;
  color: white;
  letter-spacing: 0.4cqw;
}

/* CAROUSEL HOUSE **************************************************************************/

.slider-house .text-1 {
  font-family: "Open Sans";
  font-weight: 300;
  position: absolute;
  top: 25%;
  right: 0;
  font-size: 4.2cqw;
  width: 47%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 1s ease-out 1.5s 1 normal forwards;
}

.slider-house .text-2 {
  font-family: "Merriweather";
  font-weight: 500;
  text-align: center;
  width: 100%;
  bottom: 30%;
  font-size: 0cqw;
  left: 0;
  animation: slider-house-text-2 2s ease-out 1.5s 1 normal forwards;
}

@keyframes slider-house-text-2 {
  0%   { font-size: 0cqw; opacity: 0.0;   }
  75%  { font-size: 0cqw; opacity: 0.25;  }
  100% { font-size: 6cqw; opacity: 1.0; }
}

/* CAROUSEL BEDROOM **************************************************************************/

.slider-bedroom img {
  opacity: 0.7;
}

.slider-bedroom .text-1 {
  font-family: "Open Sans";
  font-weight: 300;
  position: absolute;
  top: 30%;
  right: 0;
  font-size: 4cqw;
  width: 100%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 2s ease-out 3s 1 normal forwards;
}

.slider-bedroom .text-2 {
  font-family: "Open Sans";
  letter-spacing: 0.25cqw;
  font-weight: 300;
  position: absolute;
  top: 43%;
  right: 0;
  font-size: 2cqw;
  width: 100%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 2s ease-out 5s 1 normal forwards;
  line-height: 4rem;
}

/* CAROUSEL SWIMMMING POOL *******************************************************************/

.slider-pool .text-1 {
  font-family: "Open Sans";
  font-weight: 300;
  position: absolute;
  top: 40%;
  right: 0;
  font-size: 3cqw;
  width: 100%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 1s ease-out 2s 1 normal forwards;
}

.slider-pool .text-2 {
  font-family: "Open Sans";
  font-weight: 300;
  position: absolute;
  bottom: 30%;
  right: 0;
  font-size: 6cqw;
  width: 100%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 3s ease-out 3s 1 normal forwards;
}

.slider-pool .text-3 {
  font-family: "Merriweather";
  font-style: italic;
  font-weight: 300;
  position: absolute;
  bottom: 22%;
  right: 0;
  font-size: 2cqw;
  width: 100%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 2s ease-out 5s 1 normal forwards;
}


/* CAROUSEL KITCHEN **************************************************************************/

.slider-kitchen .text-1 {
  font-family: "Open Sans";
  font-weight: 300;
  position: absolute;
  bottom: 20%;
  right: 0;
  font-size: 5cqw;
  width: 100%;
  text-align: center;
  opacity: 0.0;
  animation: fadeIn 1s ease-out 3s 1 normal forwards;
}

/* CAROUSEL LOUNGE **************************************************************************/

.slider-lounge img {
  opacity: 0.7;
}

.slider-lounge .text-1 {
  font-family: "Open Sans";
  letter-spacing: 0.2cqw;
  font-weight: 400;
  position: absolute;
  bottom: 23%;
  left: 0;
  font-size: 3cqw;
  width: 49%;
  text-align: right;
  opacity: 0.0;
  animation: fadeIn 1s ease-out 3s 1 normal forwards;
}

.slider-lounge .text-2 {
  font-family: "Merriweather";
  letter-spacing: 0.15cqw;
  font-style: italic;
  font-weight: 300;
  position: absolute;
  bottom: 23%;
  right: 0;
  font-size: 3cqw;
  width: 49%;
  text-align: left;
  opacity: 0.0;
  animation: slider-lounge-text-2 1s ease-out 4s 1 normal forwards;
}
@keyframes slider-lounge-text-2{
  0%   { right: -400px; opacity: 0.0;   }
  50%  {                opacity: 0.0;   }
  100% { right: 0;    opacity: 1.0; }
}

.slider-lounge .text-3 {
  font-family: "Open Sans";
  letter-spacing: 0.2cqw;
  font-weight: 400;
  position: absolute;
  bottom: 23%;
  left: 50%;
  font-size: 3cqw;
  width: 38%;
  text-align: right;
  opacity: 0.0;
  animation: fadeIn 1s ease-out 3s 1 normal forwards;
}

/* CAROUSEL BILLARD **************************************************************************/

.slider-billard .text-1 {
  font-family: "Open Sans";
  letter-spacing: 0.2cqw;
  font-weight: 400;
  position: absolute;
  bottom: 23%;
  left: 0;
  font-size: 3cqw;
  width: 49%;
  text-align: right;
}

.slider-billard .text-2 {
  font-family: "Merriweather";
  letter-spacing: 0.15cqw;
  font-style: italic;
  font-weight: 300;
  position: absolute;
  bottom: 23%;
  right: 0;
  font-size: 3cqw;
  width: 48%;
  text-align: left;
  opacity: 0.0;
  animation: slider-lounge-text-2 2s ease-out 1s 1 normal forwards;
}
@keyframes slider-lounge-text-2{
  0%   { opacity: 0.0;   font-size: 100cqw; }
  75%  { opacity: 0.0;                      }
  100% { opacity: 1.0; font-size: 3cqw;   }
}

.slider-billard .text-3 {
  font-family: "Open Sans";
  letter-spacing: 0.2cqw;
  font-weight: 400;
  position: absolute;
  bottom: 23%;
  left: 50%;
  font-size: 3cqw;
  width: 38%;
  text-align: right;
}


/* DESCRIPTION & DETAILS **********************************************************************/

#description, #description *,
#details, #details * {
  font-family: "Merriweather";
}

#description, #details {
  font-size: 1.1rem;
}

h1 {
  text-align: center;
}

/* CONTACT ************************************************************************************/

#contact, #contact * {
  font-family: "Merriweather";
}

#contact {
  background-color: #eee;
}

#contact h2 {
  text-align: center;
  font-weight: 300;
  font-size: 2.2rem;
}

#email a {
  text-decoration: none;
}

#map {
  position: relative;
}

#smap {
  z-index: 10;
  width: 100%;
}

#gmap {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  z-index: -1000;
}

#address {
  margin-left: 2rem;
  font-size: 1.3rem;
}

/* AIRBNB ************************************************************************************/

#airbnb, #airbnb * {
  font-family: "Merriweather";
}

#airbnb {
  background-color: #eee;
}

#airbnb h2 {
  text-align: center;
  font-weight: 300;
}

#airbnb-button {
  display: inline-block;
  height: 60px;
  width: 161px;
  margin: auto;
  background: url(../images/airbnb-logo.jpg?v=1);
  border-radius: 15px;
}

#airbnb-button:hover {
  background: url(../images/airbnb-logo-hover.jpg);
}

#airbnb-button:active {
  background: url(../images/airbnb-logo-hover.jpg);
}

/* ROOM CARDS *********************************************************************************/

.card {
  border: none;
}

.card img {
  border-radius: 0;
}

#rooms .card-body * {
  font-family: "Merriweather";
}

#rooms .card-body h1 {
  font-size: 1.3rem;
  font-weight: 300;
  color: #444;
}

/* LIGHTBOX *********************************************************************************/

#blueimp-gallery .description {
  position: absolute;
  text-align: center;
  top: 0;
  left: 0;
  line-height: 60px;
  font-size: 1.2rem;
  font-family: "Merriweather";
  width: 100%;
  color: #fff;
  background: rgba(0,0,0,0.5);
  display: block;
}

/* FOOTER *********************************************************************************/

#footer {
  bottom: 0;
  background: #e8e8e8;
  line-height: 5rem;
  text-align: center;
  color: #888;
  font-family: "Merriweather";
}

